e2e working corrected, added proper data display, and handling of keyboard 'Done' button click

--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:padding="16dp"
     tools:context="com.dkexception.newarchitecturewithhilt.fragments.FragmentFour">
 
