--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:padding="16dp"
     tools:context="com.dkexception.newarchitecturewithhilt.fragments.FragmentOne">
 
@@ -26,6 +28,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/welcome_to_the_new_architecture"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/btnOne"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
