--- a/app/src/main/res/layout/fragment_five.xml
+++ b/app/src/main/res/layout/fragment_five.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:padding="16dp"
     tools:context="com.dkexception.newarchitecturewithhilt.fragments.FragmentFive">
 
@@ -21,17 +23,28 @@
         app:layout_constraintVertical_chainStyle="spread" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvDetails"
+        android:id="@+id/tvFlowCompletion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/flow_completion"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/tvDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvFive" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/btnFive"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvFive"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@id/tvFlowCompletion"
+        tools:text="Entered number: 56\nDetails(dkexception, a@b.com, Earth)" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnFive"
